--- a/programacion-101/modulo1_fundamentos/laboratorios/Variables_y_Expresiones.ipynb
+++ b/programacion-101/modulo1_fundamentos/laboratorios/Variables_y_Expresiones.ipynb
@@ -35,6 +35,17 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "!python tr\n"
+      ],
+      "metadata": {
+        "id": "Hak5e8mop82M"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# **Variables y Expresiones**"
@@ -254,40 +265,28 @@
     {
       "cell_type": "code",
       "source": [
-        "nombre= \"Ana\"\n",
-        "edad = 30\n",
-        "class_1 =\"Primero\"\n",
-        "mi_edad = 18\n"
+        "1nombre = \"Ana\"\n",
+        "edad* = 30\n",
+        "Class = \"Primero\"\n",
+        "MiEdad = 18\n"
       ],
       "metadata": {
         "id": "kdG5wfEEkLLb"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "message = 'Hello Python world!'\n",
-        "print(message)"
+        "print(mesage)"
       ],
       "metadata": {
-        "id": "nvP8mQJk1Ux6",
-        "outputId": "43775286-8e50-49dc-f5c0-a7fcf4b130d0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "nvP8mQJk1Ux6"
       },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hello Python world!\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -427,22 +426,10 @@
         "print(name.title())"
       ],
       "metadata": {
-        "id": "K0MaIOMn2O2O",
-        "outputId": "39814c94-349c-4a58-e025-11c508ce4b8f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "K0MaIOMn2O2O"
       },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "John Caballero\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -452,22 +439,10 @@
         "print(name.capitalize())"
       ],
       "metadata": {
-        "id": "CLpwcDNG7lrb",
-        "outputId": "52ebed06-c822-46b1-cd4a-a5223cfdbf8b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "CLpwcDNG7lrb"
       },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "John caballero\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -476,22 +451,10 @@
         "print(name.upper())"
       ],
       "metadata": {
-        "id": "YSWi6XlS2X9v",
-        "outputId": "2c1bfe79-4947-4b71-c54e-3e2da7a8c9d6",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "YSWi6XlS2X9v"
       },
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "JOHN CABALLERO\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -500,22 +463,10 @@
         "print(name.lower())"
       ],
       "metadata": {
-        "id": "dx0cOkOV2Z8f",
-        "outputId": "1399d935-e36b-423e-b365-9d14280925e8",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "dx0cOkOV2Z8f"
       },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "john caballero\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -535,22 +486,10 @@
         "print(full_name)"
       ],
       "metadata": {
-        "id": "m9JhZWap2gIB",
-        "outputId": "12daff7d-6320-4ca1-b0f3-4f40cddcf4ff",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "m9JhZWap2gIB"
       },
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "john caballero\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -596,22 +535,10 @@
         "print(\"Python\")"
       ],
       "metadata": {
-        "id": "hvaw32vS2_wC",
-        "outputId": "f7ec13e8-d05a-4bc8-f4a5-73620116fa4d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "hvaw32vS2_wC"
       },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Python\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -620,22 +547,10 @@
         "print(\"\\tPython\")"
       ],
       "metadata": {
-        "id": "x2iKglaQ3Guq",
-        "outputId": "8b0ae067-2448-44d6-bf7b-670b8ce0237a",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "x2iKglaQ3Guq"
       },
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\tPython\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -644,24 +559,10 @@
         "print(\"Languages:\\n\\tPython\\n\\tC\")"
       ],
       "metadata": {
-        "id": "XG_pHind3L0q",
-        "outputId": "e2313e19-942f-42f1-c2a1-12d9666947ed",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "XG_pHind3L0q"
       },
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Languages:\n",
-            "\tPython\n",
-            "\tC\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -714,22 +615,10 @@
         "print(name.strip())"
       ],
       "metadata": {
-        "id": "qeKqidAr8rOU",
-        "outputId": "d23a2589-58cd-4335-f846-de27a7e917dd",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "qeKqidAr8rOU"
       },
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "john caballero\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -740,22 +629,10 @@
         "print(feature.removeprefix('sunat_'))\n"
       ],
       "metadata": {
-        "id": "VMyuxobn9JHQ",
-        "outputId": "e41bd3dc-9164-4502-a8e1-9a9202c2f52f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "VMyuxobn9JHQ"
       },
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "ventas_declaradas\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -870,24 +747,10 @@
         "print(a % b)     # 1"
       ],
       "metadata": {
-        "id": "vZosDIHClNLo",
-        "outputId": "8bdeacff-acae-42ee-dd45-037780523c58",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "vZosDIHClNLo"
       },
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "13\n",
-            "1000\n",
-            "1\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -914,43 +777,16 @@
         "\n",
         "triangle_area = (base * height) / 2\n",
         "\n",
-        "print('\\033[1;34;48mEl Área del Triángulo es (cm2) es: \\033[1;37;0m' + str(triangle_area))\n",
-        "\n"
+        "print('\\033[1;34;48mEl Área del Triángulo es (cm2) es: \\033[1;37;0m' + str(triangle_area))\n"
       ],
       "metadata": {
         "id": "fz5Wk8qfkftS",
-        "outputId": "0d38a30d-6cef-4254-a512-1ba5205d15e5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9db5169f-65e5-451c-d738-6fc3d2e5212f"
       },
-      "execution_count": 40,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Cálculo de Área de Triángulo\n",
-            "Ingrese la base en cm: 4\n",
-            "Ingrese la altura en cm: 3\n",
-            "\u001b[1;34;48mEl Área del Triángulo es (cm2) es: \u001b[1;37;0m6.0\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!python triagle_area.py"
-      ],
-      "metadata": {
-        "id": "cA6_LnJ2jOqK",
-        "outputId": "667e8ea1-6412-4438-b4f3-c594140665c8",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 42,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -958,8 +794,35 @@
           "text": [
             "Cálculo de Área de Triángulo\n",
             "Ingrese la base en cm: 3\n",
-            "Ingrese la altura en cm: 4\n",
-            "\u001b[1;34;48mEl Área del Triángulo es (cm2) es: \u001b[1;37;0m6.0\n"
+            "Ingrese la altura en cm: 2\n",
+            "\u001b[1;34;48mEl Área del Triángulo es (cm2) es: \u001b[1;37;0m3.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python3 triangle_area.py\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A2eaIyD0qrJZ",
+        "outputId": "a1bb82cb-f871-46b1-8a00-3499f19d6a6c"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cálculo de Área de Triángulo\n",
+            "Ingrese la base en cm: 3\n",
+            "Ingrese la altura en cm: 3\n",
+            "\u001b[1;34;48mEl Área del Triángulo es (cm2) es: \u001b[1;37;0m4.5\n"
           ]
         }
       ]
