--- a/variables_y_expresiones.ipynb
+++ b/variables_y_expresiones.ipynb
@@ -777,14 +777,14 @@
         "\n",
         "triangle_area = (base * height) / 2\n",
         "\n",
-        "print('\\033[1;34;48mEl Área del Triángulo es (cm2) es: \\033[1;37;0m' + str(triangle_area))\n"
+        "print(str(triangle_area))\n"
       ],
       "metadata": {
         "id": "fz5Wk8qfkftS",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9db5169f-65e5-451c-d738-6fc3d2e5212f"
+        "outputId": "b0c7ea69-6ee8-44b1-8871-124bac512486"
       },
       "execution_count": null,
       "outputs": [
@@ -793,9 +793,9 @@
           "name": "stdout",
           "text": [
             "Cálculo de Área de Triángulo\n",
-            "Ingrese la base en cm: 3\n",
-            "Ingrese la altura en cm: 2\n",
-            "\u001b[1;34;48mEl Área del Triángulo es (cm2) es: \u001b[1;37;0m3.0\n"
+            "Ingrese la base en cm: 4\n",
+            "Ingrese la altura en cm: 3\n",
+            "6.0\n"
           ]
         }
       ]
@@ -842,10 +842,25 @@
         " 0.1 + 0.1"
       ],
       "metadata": {
-        "id": "U4rNAAY8_LNA"
+        "id": "U4rNAAY8_LNA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8d54e410-04a9-4a72-8b52-94e02f9ac3ad"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -853,10 +868,25 @@
         "0.1 + 0.2"
       ],
       "metadata": {
-        "id": "uYRm7RqD_NFT"
+        "id": "uYRm7RqD_NFT",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d9aa5a23-02d2-4877-cdff-e26eaf9272bc"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.30000000000000004"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -967,6 +997,13 @@
       ],
       "metadata": {
         "id": "oX_mKA8AAAJI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "h5QFRenJtNpB"
       }
     },
     {
